Read num channels from IP configuration.
Fix gcc warning.
Remove unused define for buffer length mask(XMCDMA_BD_LEN_MASK).
Fix typos and rephrase comment description.
Read buffer length register width from IP config.
In driver tcl update get_cells API to support hierarchical designs.
Added 64 bit DMA addresses support for Microblaze-X

nandpsu_v1_5:
Added 64 bit DMA addresses support for Microblaze-X

cpu_v2_8:
Added Os and LTO settings in extra compiler flags for PMU BSP

iicps_v3_8:
Fix for Cppcheck and Doxygen warnings.
Add timeout interrupt in master mode.

intc_v3_8:
Updated check_cascade proc, to add check
for irq_in pin.It fixes CR#1005371

iomodule_v2_6:
Updated driver tcl to replace get_cells -of_object with get_cells -of_objects.
Added support for 64 bit vector address.

tmr_inject_v1_1:
Added support for 64 bit fault address.

qspips_v3_5:
Fixed compilation warnings for ARMCC.
Added support for the low density ISSI flash parts.

qspipsu_v1_8:
Added support for IS25LP064 and IS25WP064.
Added an example for accessing 64bit dma within 32 bit application.(CR#1004701)
Removed checkpatch warnings for xqspipsu.c and xqspipsu.h
Removed the mentions of Spansion flash from BlockErase API. (CR#1006247)
Fixed cppcheck, doxygen and gcc warnings. (CR#1006336)
Setup64BRxDma() should be called if the RxAddress is greater than 32 bit address space. (CR#1006862)
Added support for low density ISSI flash parts
Fixed the code in XQspiPsu_GenFifoEntryData() for data transfer length up to 255 for reducing the extra loop.
Fixed compilation warnings.
Added 64 bit DMA addresses support for Microblaze-X.

rfdc_v5_0:
Update DAC min sampling rate to 500MHz and also update VCO Range, PLL_DIVIDER and PLL_FPDIV ranges.
Add XRFdc_GetFabClkOutDiv() API to read fabric clk div.
Add Inline APIs XRFdc_CheckBlockEnabled(), XRFdc_CheckTileEnabled().
Add support to dump HSCOM regs in XRFdc_DumpRegs() API.
Fixed Multiband crossbar settings in C2C mode.